NIFI-15335 Created migration property unit tests for those components in extended bundles nifi-airtable-bundle, nifi-amqp-bundle, nifi-asana-bundle, nifi-asn1-bundle and nifi-aws-bundle which did not have.